<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_notf_title"
                style="@style/SettingsTextView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/push" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_notf_switch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/settings_margin_right" />
        </LinearLayout>

        <View style="@style/DivideLine" />

        <TextView
            android:id="@+id/setting_version"
            style="@style/SettingsTextView"
            android:text="@string/version" />

        <View style="@style/DivideLine" />

        <TextView
            android:id="@+id/setting_number"
            style="@style/SettingsTextView"
            android:text="@string/number" />

        <View style="@style/DivideLine" />

        <TextView
            android:id="@+id/setting_web"
            style="@style/SettingsTextView"
            android:text="@string/web" />

        <View style="@style/DivideLine" />

        <TextView
            android:id="@+id/setting_exit"
            style="@style/SettingsTextView"
            android:text="@string/exit" />
    </LinearLayout>
</layout>