<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/srcollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            tools:context=".CreateFenceActivity">

            <include
                android:id="@+id/toolBarContainer"
                layout="@layout/tools_bar" />

            <TextView
                android:id="@+id/createFence"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|left"
                android:text="@string/create_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBarContainer"/>

            <EditText
                android:id="@+id/createFenceET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/create_fence_name_hint"
                app:layout_constraintBottom_toBottomOf="@id/createFence"
                app:layout_constraintLeft_toRightOf="@id/createFence"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBarContainer"/>

            <TextView
                android:id="@+id/createFenceStartTv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|start"
                android:paddingLeft="10dp"
                android:text="@string/start_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createFence" />

            <TextView
                android:id="@+id/createFenceEndTv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical|start"
                android:paddingLeft="10dp"
                android:text="@string/end_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createFenceStartTv" />

            <TextView
                android:id="@+id/fenceAddDevice"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical|start"
                android:paddingLeft="10dp"
                android:text="@string/add_device"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createFenceEndTv" />

            <ImageView
                android:id="@+id/fenceAddDeviceImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/add"
                app:layout_constraintBottom_toBottomOf="@id/fenceAddDevice"
                app:layout_constraintLeft_toRightOf="@id/fenceAddDevice"
                app:layout_constraintTop_toTopOf="@id/fenceAddDevice" />
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fenceCreateFlex"
                app:maxLine="5"
                app:layout_constraintTop_toBottomOf="@id/fenceAddDeviceImg"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:showDivider="beginning|middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerDrawable="@drawable/divide">
            </com.google.android.flexbox.FlexboxLayout>
            <TextView
                android:id="@+id/createFenceAddPoint"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/add_point"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fenceCreateFlex" />

            <TableLayout
                android:id="@+id/createFencePoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createFenceAddPoint">

                <TableRow android:paddingLeft="10dp">

                    <EditText
                        android:id="@+id/createFenceP1Lng"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lng_1" />

                    <EditText
                        android:id="@+id/createFenceP1Lat"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lat_1" />
                </TableRow>

                <TableRow android:paddingLeft="10dp">

                    <EditText
                        android:id="@+id/createFenceP2Lng"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lng_2" />

                    <EditText
                        android:id="@+id/createFenceP2Lat"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lat_2" />
                </TableRow>

                <TableRow android:paddingLeft="10dp">

                    <EditText
                        android:id="@+id/createFenceP3Lng"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lng_3" />

                    <EditText
                        android:id="@+id/createFenceP3Lat"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lat_3" />
                </TableRow>

                <TableRow android:paddingLeft="10dp">

                    <EditText
                        android:id="@+id/createFenceP4Lng"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lng_4" />

                    <EditText
                        android:id="@+id/createFenceP4Lat"
                        style="@style/LNG_LAT_ET"
                        android:hint="@string/add_point_lat_4" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/fencePointsMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select_points_on_map"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createFencePoints" />

            <Button
                android:id="@+id/fencePointsClean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select_points_clean"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createFencePoints" />

            <View
                android:layout_width="match_parent"
                android:layout_height="800dp"
                app:layout_constraintTop_toBottomOf="@id/fencePointsMap" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>