<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <CheckBox
            android:id="@+id/device_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/device_tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/device_imei"
            app:layout_constraintRight_toLeftOf="@id/device_linenumber"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/equipment_tag"
            tools:text="测试数据" />

        <TextView
            android:id="@+id/device_imei"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@id/device_checked"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/list_equipment"
            tools:text="123456789012345" />

        <TextView
            android:id="@+id/device_linenumber"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/equipment_number"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="15096092544" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>